--- a/app/view1/view1.css
+++ b/app/view1/view1.css
@@ -1,5 +1,5 @@
 .imageWrapper {
-    display: inline-block;
+    display: block;
 }
 
 .view1 .largeImageContainer {
@@ -9,18 +9,18 @@
 .view1 .largeImageContainer img.large{
     height: 600px;
 }
-.view1 .largeImageContainer .imageWrapper span.hoverText{
-    position: relative;
-    top: 30px;
-    left: 0;
-    visibility: hidden;
-}
-.view1 .largeImageContainer .imageWrapper:hover span.hoverText{
-    visibility: visible;
-}
 
 .view1 .fullResImageContainer img {
-    position:absolute;
+    
+}
+
+.view1 .fullResImageContainer {
+    position: absolute;
+    width: 100%;
+    min-height: 100%;
     top: 0;
     left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    text-align: center;
+
 }
