--- a/app/view1/view1.css
+++ b/app/view1/view1.css
@@ -11,7 +11,7 @@
 }
 
 .view1 .fullResImageContainer img {
-    
+
 }
 
 .view1 .fullResImageContainer {
@@ -22,5 +22,10 @@
     left: 0;
     background-color: rgba(0, 0, 0, 0.8);
     text-align: center;
+    display: table;
+}
 
+.view1 .fullResImageContainer .imageWrapper {
+    vertical-align: middle;
+    display: table-cell;
 }
