Rename View1 to PhotoDisplay___ and View2 to PhotoUpload___ + moved views to dedicated folder

--- a/app/views/homeView/homeViewTemplate.html
+++ b/app/views/homeView/homeViewTemplate.html
@@ -1,4 +1,4 @@
-<div class="homePage" ng-controller="homeViewCtrl">
+<div class="homePage" ng-controller="HomeViewController">
     <div class="stage">
         <div>{{welcomeMessage}}</div>
         <div>{{companyName}}</div>
