--- a/app/views/photoUpload/photoUploadTemplate.html
+++ b/app/views/photoUpload/photoUploadTemplate.html
@@ -1,4 +1,4 @@
-<div ng-controller="View2Ctrl">
+<div ng-controller="PhotoUploadController">
     <form name="uploadPictureForm">
         <fieldset>
             <legend>Upload your own picture</legend>
