--- a/app/views/photoDisplay/photoDisplayTemplate.html
+++ b/app/views/photoDisplay/photoDisplayTemplate.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="style/css/view1.css">
+<link rel="stylesheet" href="style/css/photoDisplayStyle.css">
 <div class="view1" ng-controller="PhotoDisplayController as photoDisplayController">
     <div class="largeImageContainer">
         <div class="imageWrapper">
