Refactor home page to use multi GET api

--- a/app/views/photoUpload/photoUploadTemplate.html
+++ b/app/views/photoUpload/photoUploadTemplate.html
@@ -9,15 +9,15 @@
             </div>
             <div>
                 <label>Title: </label>
-                <input type="text" name="title" ng-model="photoTitle" size="48" required="false" />
+                <input type="text" name="photoTitle" ng-model="photoTitle" size="48" required="false" />
             </div>
             <div>
                 <label>Caption: </label>
-                <input type="text" name="caption" ng-model="photoCaption" size="48" required="false" />
+                <input type="text" name="photoCaption" ng-model="photoCaption" size="48" required="false" />
             </div>
             <div>
                 <label>Credits: </label>
-                <input type="text" name="credits" ng-model="photoCredits" size="48" required="false" />
+                <input type="text" name="photoCredits" ng-model="photoCredits" size="48" required="false" />
             </div>
             <button ng-submit="submitPicture(uploadedPictures)">Submit</button>
         </fieldset>
